--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "seneca-cart",
-  "version": "0.2.0",
+  "name": "seneca-async-cart",
+  "version": "0.2.1",
   "description": "Shopping cart",
   "main": "lib/cart.js",
   "scripts": {
@@ -21,7 +21,7 @@
     "gex": "~0.1.4",
     "seneca-engage": "~0.2.1",
     "chai": "~1.9.1",
-    "seneca": "~0.5.20",
+    "seneca-async": "x",
     "mocha": "~1.21.4"
   },
   "dependencies": {
